css/style.css
html, body {
  height: 100%;
  width: 100%;
  background-color: #F5D6BA;
}

a {
  color: white;
}

a:hover {
  color: gray;
}

.navbar-ul {
  list-style: none;
  position: fixed;
  z-index: 10;
  width: 100%;
}

.navbar-ul li {
  display: inline;
  float: left;
  padding: 10px;
}

.navbar-ul a {
  font-family: 'Nunito', sans-serif;
  text-decoration: none;
}

#main-carousel {
  width: 100%;
  height: 400px;
}

.carousel-cell {
  width: 70%;
  height: 400px;
  margin-right: 10px;
  background: transparent;
}

/* cell number */
.carousel-cell:before {
  display: block;
  text-align: center;
}

.carousel-content {
  padding-top: 50px;
  text-align: center;
}

.slide-arrow {
  display: block;
  position: absolute;
  left: 50%;
  transform: translate(-50%);
  z-index: 1;
}

.icons {
  margin: 0 auto;
  display: block;
}

.animated {
  float: left;
  position: relative;
  left: 15%;
}

.footer {
  font-family: 'Nunito', sans-serif;
  font-size: 10px;
  text-align: center;
  display: block;
  position: fixed;
  height: 20px;
  width: 100%;
  bottom: 0;
  background-color: ;
}

